# prod-tst-service-mock

./: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
cian_mock_service/: main.py  schemas.py
hh_mock_service/: main.py  schemas.py
models/: catboost_from_rub.cbm  catboost_to_rub.cbm
models/sentence_transformer_model/: config_sentence_transformers.json
tk_mock_service/: main.py  schemas.py
